@@ -1035,7 +1035,7 @@ class CGI
       extend TagMaker
       methods = ""
       # - -
-      for element in %w[ SECTION NAV ARTICLE ASIDE HGROUP
+      for element in %w[ SECTION NAV ARTICLE ASIDE HGROUP HEADER
         FOOTER FIGURE FIGCAPTION S TIME U MARK RUBY BDI IFRAME
         VIDEO AUDIO CANVAS DATALIST OUTPUT PROGRESS METER DETAILS
         SUMMARY MENU DIALOG I B SMALL EM STRONG DFN CODE SAMP KBD
