@@ -357,10 +357,6 @@ class CGICoreTest < Test::Unit::TestCase
     cgi = CGI.new('html5')
     expected = '<!DOCTYPE HTML>'
     assert_equal(expected, cgi.doctype)
-    # cgi.header not broken
-    expected = "Content-Type: text/html\r\n\r\n"
-    actual = cgi.header
-    assert_equal(expected, actual)
   end
 
 
